--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pcelvng/net",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "simple network diagnostic tools.",
   "homepage": "https://github.com/pcelvng/simple-netjs",
   "repository": "github:pcelvng/simple-netjs.git",
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "rlball",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^10.9.3",
@@ -17,12 +17,7 @@
   },
   "dependencies": {
     "address": "^1.0.3",
-    "internal-ip": "^3.0.1",
-    "isomorphic-ws": "^4.0.1",
     "net-ping": "^1.2.3",
-    "promise": "^8.0.1",
-    "public-ip": "^2.4.0",
-    "websocket": "^1.0.26",
-    "ws": "^6.0.0"
+    "public-ip": "^2.4.0"
   }
 }
