--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pcelvng/net",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "simple network diagnostic tools.",
   "homepage": "https://github.com/pcelvng/simple-netjs",
   "repository": "github:pcelvng/simple-netjs.git",
@@ -16,8 +16,11 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "address": "^1.0.3",
+    "iplocation": "^5.0.1",
     "net-ping": "^1.2.3",
-    "public-ip": "^2.4.0"
+    "network": "^0.4.1",
+    "node-arp": "^1.0.6",
+    "public-ip": "^2.4.0",
+    "request": "^2.88.0"
   }
 }
