traceroute reverse dns lookup functionality with examples

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "network map",
     "arp",
     "icmp",
-    "network"
+    "network",
+    "dns",
+    "reverse-dns"
   ],
   "author": "rlball",
   "license": "MIT",
