--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "network": "^0.4.1",
     "node-arp": "^1.0.6",
     "public-ip": "^2.4.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "speedtest-net": "^1.4.3"
   }
 }
