--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pcelvng/net",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "description": "simple network diagnostic tools.",
   "homepage": "https://github.com/pcelvng/netjs",
   "repository": "github:pcelvng/netjs.git",
@@ -25,7 +25,11 @@
     "icmp",
     "network",
     "dns",
-    "reverse-dns"
+    "reverse-dns",
+    "speed test",
+    "traceroute",
+    "download speed",
+    "upload speed"
   ],
   "author": "rlball",
   "license": "MIT",
