--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "ip": "^1.1.5",
     "iplocation": "^5.0.1",
     "local-devices": "^1.1.1",
-    "net-ping": "^1.2.3",
     "network": "^0.4.1",
     "node-arp": "^1.0.6",
+    "nodejs-traceroute": "^1.1.1",
     "public-ip": "^2.4.0",
     "request": "^2.88.0",
-    "speedtest-net": "^1.4.3"
+    "speedtest-net": "^1.4.3",
+    "tcp-ping": "^0.1.1"
   },
-  "publishConfig":{"registry":"https://registry.npmjs.org/"}
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
